# Trading-Lab

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  Trading-Lab.code-workspace  docker-compose.yml  pyproject.toml
.claude/: settings.json
config/: portfolio.yaml  research.yaml  system.yaml  venues.yaml
docs/: agentic-loop.md  architecture.md  deployment.md  getting-started.md  polymarket_auth.md  roadmap.md  scheduling.md
docs/plans/: 2026-05-26-strategy-search-capture-system.md  2026-05-28-refine-strategy-ingestion-middle.md  2026-06-04-cross-venue-readiness.md  2026-06-05-alpha-insider-strategy-intake.md  2026-06-05-alpha-insider-tracer-bullet.md
nautilus_predict/: __init__.py  config.py
nautilus_predict/adapters/: __init__.py
nautilus_predict/data/: __init__.py
nautilus_predict/risk/: position_limits.py
nautilus_predict/runner/: backtest.py  paper.py
nautilus_predict/strategies/: __init__.py  catalyst_trader.py  complement_arb.py  market_maker.py
polyfill-rs/: Cargo.toml
polyfill-rs/src/: lib.rs  ws_client.rs
research/: sources.yaml
research/agent_ops/: autonomy_backlog.md  autonomy_usage_wip.md
research/hypotheses/: arb-complement.md  entropy-regularized-certainty-equivalent-bellman.md  hidden-markov-models-for-quant-finance.md  hl-bollinger-mr.md  hl-donchian-1d.md  hl-donchian-alts-trial.md  hl-donchian.md  hl-funding-carry.md  how-trading-like-an-idiot-makes-me-10000month-15.md  i-backtested-rsi-trading-strategy-for-6-years-60.md  madevolve-evolutionary-optimization-of-trading-s.md  recent-quant-links-from-quantocracy-as-of-051720.md  recent-quant-links-from-quantocracy-as-of-052020.md  this-simple-scalping-strategy-makes-me-over-1000.md  tick-mean-revert.md  wide-spread-fade.md
research/optimizer_outputs/: hl-bollinger-mr_2025-12-01_2026-05-31_rerun.json  hl-donchian_2024-05-30_2026-06-05.json  hl-funding-carry_2025-12-01_2026-05-31.json
research/paper_reports/: hl_backtest_evaluation_20260530.md  tick-mean-revert_20260525.md  tick-mean-revert_20260528.md  tick-mean-revert_20260529.md  tick-mean-revert_20260530.md  tick-mean-revert_20260603.md  tick-mean-revert_20260604.md  tick-mean-revert_20260605.md
runbooks/: codegen-strategy.md  discover-strategies.md  distill-idea.md  hyperliquid-testnet.md  name-strategy.md  onboard-existing-strategy.md  optimize-strategy.md  review-source-dossier.md  specify-hypothesis.md  test-strategy.md
scripts/: assign_thesis_name.py  audit_proposed_backlog.py  backtest.py  build_polymarket_5m_dataset.py  build_source_dossier.py  capture_crypto_reference_prices.py  capture_hyperliquid_daily.py  capture_strategy_ideas.py  check_cross_venue_readiness.py  check_env.py  check_positions.py  commit_repo_changes.py  cross_venue_backtest.py  cross_venue_paper_run.py  derive_polymarket_keys.py  discover_strategies.py  distill_source_material.py  download_hyperliquid_data.py  download_polymarket_data.py  drop_youtube_link.py  eval_strategy.py  fetch_hl_outcome_markets.py  fetch_markets.py  halt_trading.py  hermes_cron_auditor.py  hermes_remaining_crons.py  hermes_sync_markets_cron.py  hl_backtest.py  hl_eval_strategy.py  hl_optimize.py  ingest_link.py  ingestion_status.py  live_run.py  migrate_research_layout.py  operator_briefing.py  optimize_strategy.py  paper_run.py  paper_run_v2.py  paper_summary.py  paper_watcher.py  (+15 more)
specs/: 2026-05-24_bootstrap.md  2026-05-27_hyperliquid_testnet_paper.md
src/nautilus_predict/: __init__.py  backtest.py  config.py  main.py  node.py
src/trading_lab/: backtest.py  config.py  main.py  node.py
tests/: test_backtest_realism.py  test_check_env.py  test_codegen_guards.py  test_commit_repo_changes.py  test_config.py  test_cross_venue_backtest.py  test_cross_venue_fair_value.py  test_cross_venue_hedge_strategy.py  test_cross_venue_observe_run.py  test_cross_venue_paper_runner.py  test_cross_venue_state_machine.py  test_hermes_cron_scripts.py  test_hl_backtest_cli.py  test_hl_backtest_runner.py  test_hl_eval_strategy.py  test_hl_optimize.py  test_paper_summary.py
tests/adapters/: test_polymarket_auth.py
tests/agent/: test_codegen_guards.py  test_discovery.py  test_ingestion.py  test_lifecycle.py  test_portfolio.py  test_source_capture.py  test_spec_validation.py  test_venue_equity.py
tests/data/: test_hl_bar_loader.py  test_hl_catalog.py  test_hl_daily_capture.py
tests/research/: test_cross_venue_spec.py  (+7 more)
(+1350 files in other folders)
