[workspace]
members = ["."]

[package]
name = "polyfill-rs"
version = "0.1.0"
edition = "2021"
description = "Ultra-low latency WebSocket client for Polymarket order routing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[features]
default = []
python-bindings = ["pyo3"]
